# FindInnerBoundary

./: .gitignore  CMakeLists.txt  README.md
code/: FindInnerBoundary.cpp  FindInnerBoundary.h  HoleFiller.cpp  HoleFiller.h  MeshCube.cpp  MeshCube.h  MeshDoctor.cpp  MeshDoctor.h  RBF_interpolation.cpp  RBF_interpolation.hpp  main.cpp
include/: OpenMeshWarpper.h  SplineInterpolation.hpp  SurfaceIntepolation.hpp  nanoflann.hpp  offsetCurve.hpp
include/Eigen/src/Core/arch/CUDA/: Half.h
